<resources>
    <string name="app_name">CollectMe</string>
    <string name="app_name_long">CollectMe - Asset Collection </string>

    <string name="main_activity_label">All Assets</string>

    <string name="asset_name">Asset Name</string>
    <string name="asset_name_hint">Add asset name</string>
    <string name="asset_category">Select asset category</string>
    <string name="new_asset">New Asset</string>
    <string name="asset_detail_header_image">Asset Details Header Image</string>
    <string name="asset_extra_info">Notes</string>
    <string name="asset_extra_info_hint">Add extra remarks</string>

    <string name="location_updated_message">Location updated</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="asset_list">All Assets</string>
    <string name="map_view">Map of Assets</string>

    <string name="radio_pump">Pump</string>
    <string name="radio_computer">Computer</string>
    <string name="radio_other">Other</string>
    <string name="radio_meter">Meter</string>
    <string name="radio_electricity">Electricity Poles</string>
    <string name="radio_electric_pole">Electric Pole</string>
    <string name="radio_bulb">Electric part</string>
    <string name="radio_petrol">Petrol Pump</string>
    <string name="radio_signage">Signage</string>
    <string name="radio_sofa">Benches</string>
    <string name="radio_tap">Plumbing part</string>
    <string name="radio_tree">Park Tree</string>

    <string name="title_activity_maps">Map</string>
</resources>
