<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="180dp"
    android:layout_width="250dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/category_chooser"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground">

        <RadioButton
            android:id="@+id/radio_pump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_pump"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_computer"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_antenna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_antenna"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_meter"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_other"
            android:layout_margin="20dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</ScrollView>