<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/asset_detail_layout"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".AssetDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <LinearLayout
                    style="@style/Widget.CardContent.Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_name"
                        android:textSize="14sp"
                        android:textColor="@color/colorDetailsLabel"/>

                    <EditText
                        android:id="@+id/asset_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="19sp"
                        android:hint="@string/asset_name_hint"
                        android:textColor="@color/colorBlack"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailSubject"
                        android:singleLine="true"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_category"
                        android:textSize="14sp"
                        android:textColor="@color/colorDetailsLabel" />
                    <EditText
                        android:id="@+id/asset_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="19sp"
                        android:hint="@string/asset_name_hint"
                        android:textColor="@color/colorBlack"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_extra_info"
                        android:textSize="14sp"
                        android:textColor="@color/colorDetailsLabel"/>
                    <EditText
                        android:id="@+id/asset_extra_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="19sp"
                        android:hint="@string/asset_extra_info_hint"
                        android:textColor="@color/colorBlack"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailSubject"
                        android:singleLine="true"/>

                    <Switch
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Save asset's coordinates?"
                        android:id="@+id/gpsSwitch"
                        android:layout_gravity="bottom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/GPSLabel"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:text="GPS coordinates"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/asset_coordinates"
                        android:layout_marginTop="10dp"
                        android:textSize="19sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/asset_coordinates_saved"
                        android:layout_marginTop="10dp"
                        android:textSize="19sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:id="@+id/logCard"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add to Log"
                    android:id="@+id/button"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    style="@style/Widget.CardContent.Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/logText"
                        android:textSize="16sp"
                        android:textColor="@color/colorDetailsLabel"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/updateFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_cab_done_mtrl_alpha"
        app:layout_anchor="@+id/item_detail_container"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
